--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="src/output.css" rel="stylesheet">
   <title>Portofolio Eliya</title>
+  <meta name="google-site-verification" content="_LZDaMF0SFEe-LdddNHcUDAdLN4HC0LA22LTxKFUaoE" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -100,12 +101,81 @@
       100% { background-position: 200% center; }
     }
 
+  /* Animasi Fade In */
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  .animate-fade-in {
+    animation: fadeIn 1s ease-out forwards;
+  }
+
+  /* Animasi Slide In Left */
+  @keyframes slideInLeft {
+    from {
+      opacity: 0;
+      transform: translateX(-50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  .animate-slide-in-left {
+    animation: slideInLeft 1s ease-out forwards;
+  }
+
+  /* Animasi Slide In Right */
+  @keyframes slideInRight {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  .animate-slide-in-right {
+    animation: slideInRight 1s ease-out forwards;
+  }
+
+  /* Animasi Fade Up */
+  @keyframes fadeUp {
+    from {
+      opacity: 0;
+      transform: translateY(40px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .animate-fade-up {
+    animation: fadeUp 1s ease-out forwards;
+  }
+   .fade-up-on-scroll {
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
+  }
+
+  .fade-up-on-scroll.visible {
+    animation: fadeUp 0.8s ease-out forwards;
+  }
+
   </style>
 </head>
 <body class="bg-gray-900 text-green-400 min-h-screen">
-<audio id="helloSound" src="https://www.myinstants.com/en/instant/helloo-mp3-58402/?utm_source=copy&utm_medium=share"></audio>
-<audio id="yeaySound" src="https://www.myinstants.com/en/instant/yeay-childrens-8842/?utm_source=copy&utm_medium=share"></audio>
-
+<audio id="anyeong" src="asset/anyeong.mp3" autoplay></audio>
 <!-- Navbar -->
 <nav class="flex items-center justify-between px-6 py-4 bg-gray-800 shadow-md fixed top-0 left-0 right-0 z-50">
   <!-- Logo -->
@@ -143,10 +213,10 @@
 
   <!-- Left Content -->
   <div class="lg:w-1/2 flex flex-col items-center lg:items-start text-center lg:text-left space-y-6 z-10">
-    <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight tracking-wide text-white drop-shadow-lg">
+    <h1 class="fade-in-on-scroll text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight tracking-wide text-white drop-shadow-lg">
       I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-lime-300 to-white animate-gradient">ELIYA NUR AR RAHMADAN</span>
     </h1>
-    <p class="text-white text-lg md:text-xl font-medium max-w-xl drop-shadow" >
+    <p class="fade-up-on-scroll text-white text-lg md:text-xl font-medium max-w-xl drop-shadow" >
       Membuat Website yang Kreatif, Responsif, dan Interaktif untuk mendukung Transformasi Digital yang Lebih Baik.
     </p>
     <a href="#kontak" class="mt-4 inline-block px-8 py-3 rounded-full font-semibold text-white bg-gradient-to-r from-green-400 to-green-600 hover:from-green-500 hover:to-green-700 shadow-lg shadow-green-500/50 transition-all duration-300 ease-in-out transform hover:scale-105" data-aos="zoom-in" data-aos-delay="400">
@@ -155,7 +225,7 @@
   </div>
 
   <!-- Right Content -->
-  <div class="lg:w-1/2 flex justify-center z-10">
+  <div class="slide-right-on-scroll lg:w-1/2 flex justify-center z-10">
     <div class="relative group">
       <img src="asset/PROFIL.png" alt="Foto Eliya" class="w-[320px] sm:w-[400px] md:w-[480px] h-auto object-cover rounded-3xl shadow-[0_0_60px_15px_rgba(34,197,94,0.5)] transition-transform duration-500 transform group-hover:scale-105">
     </div>
@@ -163,26 +233,26 @@
 </section>
 
 <!-- About Section -->
-<section id="about" class="bg-gray-950 text-green-300 py-24 px-6 lg:px-20">
+<section id="about" class="bg-gray-950 text-green-300 py-24 px-6 lg:px-20 ">
   <div class="max-w-7xl mx-auto flex flex-col-reverse lg:flex-row items-center justify-between gap-16">
     <!-- Image -->
-    <div class="lg:w-1/2 flex justify-center">
+    <div class="lg:w-1/2 flex justify-center fade-in-on-scroll">
       <div class="w-72 h-72 lg:w-80 lg:h-80 rounded-3xl overflow-hidden border-4 border-green-500 shadow-xl shadow-green-400/30 transition-transform duration-300 hover:scale-105">
         <img src="asset/Profill (2).png" alt="Eliya's Photo" class="w-full h-full object-cover object-top" />
       </div>
     </div>
     <!-- Text -->
-    <div class="lg:w-1/2 space-y-8 text-center lg:text-left px-4" >
+    <div class="lg:w-1/2 space-y-8 text-center lg:text-left px-4 fade-up-on-scroll" >
       <h2 class="text-4xl sm:text-5xl font-extrabold text-white leading-tight">About <span class="bg-gradient-to-r from-green-400 to-white bg-clip-text text-transparent">Me</span></h2>
-      <h3 class="text-2xl sm:text-3xl font-semibold flex items-center justify-center lg:justify-start gap-3 text-green-400">
+      <h3 class="text-2xl sm:text-3xl font-semibold flex items-center justify-center lg:justify-start gap-3 text-green-400 fade-in-on-scroll">
         <i class="fas fa-user-circle text-green-500 text-3xl"></i> Who Am I?
       </h3>
-      <p class="text-base sm:text-lg text-white leading-relaxed max-w-xl mx-auto lg:mx-0">
+      <p class="text-base sm:text-lg text-white leading-relaxed max-w-xl mx-auto lg:mx-0 fade-in-on-scroll">
         Hello! Aku adalah seorang <span class="font-semibold text-green-400">Frontend Developer</span> yang antusias membangun tampilan web yang elegan, interaktif, dan mobile-friendly. Aku berpengalaman menggunakan <span class="font-semibold text-green-400">Tailwind CSS</span>, dan <span class="font-semibold text-green-400">JavaScript</span>.
         <br><br>
         Aku percaya bahwa teknologi yang dipadukan dengan desain yang menarik bisa menciptakan pengalaman pengguna yang luar biasa. Di luar coding, aku suka menggambar, eksperimen UI, dan bersantai sambil nyari inspirasi.
       </p>
-      <div class="pt-4">
+      <div class="pt-4 fade-up-on-scroll">
         <a href="asset/CV ELIYA.pdf" target="_blank" class="inline-flex items-center gap-3 px-8 py-3 rounded-full font-semibold text-white bg-gradient-to-r from-green-500 to-teal-500 hover:from-green-600 hover:to-teal-600 shadow-md shadow-green-500/40 transition-all duration-300 hover:scale-105">
           <i class="fas fa-file-pdf text-white text-lg"></i> Lihat CV
         </a>
@@ -200,7 +270,7 @@
 
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6">
       <!-- Skill Item HTML -->
-      <div class="skill-border" >
+      <div class="skill-border fade-up-on-scroll" style="animation-delay: 0.1s" >
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5">
           <p class="text-sm sm:text-base font-medium">HTML5</p>
@@ -208,7 +278,7 @@
       </div>
 
       <!-- CSS -->
-      <div class="skill-border">
+      <div class="skill-border fade-up-on-scroll" style="animation-delay: 0.2s">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3">
           <p>CSS3</p>
@@ -216,7 +286,7 @@
       </div>
 
       <!-- Bootstrap -->
-      <div class="skill-border">
+      <div class="skill-border fade-up-on-scroll" style="animation-delay: 0.3s">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="Bootstrap">
           <p>Bootstrap</p>
@@ -224,7 +294,7 @@
       </div>
 
       <!-- Tailwind -->
-      <div class="skill-border">
+      <div class="skill-border fade-up-on-scroll" style="animation-delay: 0.4s">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-original.svg" alt="Tailwind CSS">
           <p>Tailwind CSS</p>
@@ -232,7 +302,7 @@
       </div>
 
       <!-- JavaScript -->
-      <div class="skill-border">
+      <div class="skill-border fade-up-on-scroll" style="animation-delay: 0.5s">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
           <p>JavaScript</p>
@@ -240,7 +310,7 @@
       </div>
 
       <!-- PHP -->
-      <div class="skill-border">
+      <div class="skill-border fade-up-on-scroll" style="animation-delay: 0.5s">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
           <p>PHP</p>
@@ -248,7 +318,7 @@
       </div>
 
       <!-- Laravel -->
-      <div class="skill-border">
+      <div class="skill-border fade-up-on-scroll" style="animation-delay: 0.7s">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel">
           <p>Laravel</p>
@@ -269,7 +339,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
 
       <!-- Project 1 -->
-      <div class="project-card bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl overflow-hidden shadow-lg hover:shadow-green-400/40 transition transform hover:-translate-y-2 duration-300">
+      <div class="project-card bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl overflow-hidden shadow-lg hover:shadow-green-400/40 transition transform hover:-translate-y-2 duration-300 fade-up-on-scroll" style="animation-delay: 0.1s">
         <div class="bg-gray-900">
           <img src="asset/project/Project1.png" class="w-full h-48 object-cover" alt="Kalkulator">
           <div class="p-6 text-left">
@@ -288,7 +358,7 @@
       </div>
 
       <!-- Project 2 -->
-      <div class="project-card bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl overflow-hidden shadow-lg hover:shadow-green-400/40 transition transform hover:-translate-y-2 duration-300">
+      <div class="project-card bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl overflow-hidden shadow-lg hover:shadow-green-400/40 transition transform hover:-translate-y-2 duration-300 fade-up-on-scroll" style="animation-delay: 0.2s">
         <div class="bg-gray-900">
           <img src="asset/project/Project4.png" class="w-full h-48 object-cover" alt="Eliya's Wardrobe shop">
           <div class="p-6 text-left">
@@ -307,7 +377,7 @@
       </div>
 
       <!-- Project 3 -->
-      <div class="project-card bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl overflow-hidden shadow-lg hover:shadow-green-400/40 transition transform hover:-translate-y-2 duration-300">
+      <div class="project-card bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl overflow-hidden shadow-lg hover:shadow-green-400/40 transition transform hover:-translate-y-2 duration-300 fade-up-on-scroll" style="animation-delay: 0.3s">
         <div class="bg-gray-900">
           <img src="asset/project/Project3.png" class="w-full h-48 object-cover" alt="To-do List">
           <div class="p-6 text-left">
@@ -326,7 +396,7 @@
       </div>
 
       <!-- Hidden Project 4 -->
-      <div class="project-card hidden bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl overflow-hidden shadow-lg hover:shadow-green-400/40 transition transform hover:-translate-y-2 duration-300">
+      <div class="project-card hidden bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl overflow-hidden shadow-lg hover:shadow-green-400/40 transition transform hover:-translate-y-2 duration-300 fade-up-on-scroll" style="animation-delay: 0.4s">
         <div class="bg-gray-900">
           <img src="asset/project/Project2.png" class="w-full h-48 object-cover" alt="Portofolio">
           <div class="p-6 text-left">
@@ -365,7 +435,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
       
       <!-- Sertifikat Card 1 -->
-       <div class="bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl shadow-lg hover:shadow-green-400/40 overflow-hidden transition transform hover:-translate-y-2 duration-300">
+       <div class="bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl shadow-lg hover:shadow-green-400/40 overflow-hidden transition transform hover:-translate-y-2 duration-300 fade-up-on-scroll" style="animation-delay: 0.1s">
   <div class="bg-gray-900 rounded-2xl overflow-hidden shadow-inner">
     <img src="asset/certificate/sertifikat 1.png" alt="Sertifikat Belajar Web"
          class="rounded-lg w-full mb-4 group-hover:ring-2 group-hover:ring-green-400 transition duration-300">
@@ -389,7 +459,7 @@
 </div>
     
       <!-- Sertifikat Card 2 -->
-       <div class="bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl shadow-lg hover:shadow-green-400/40 overflow-hidden transition transform hover:-translate-y-2 duration-300">
+       <div class="bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl shadow-lg hover:shadow-green-400/40 overflow-hidden transition transform hover:-translate-y-2 duration-300 fade-up-on-scroll" style="animation-delay: 0.2s">
   <div class="bg-gray-900 rounded-2xl overflow-hidden shadow-inner">
     <img src="asset/certificate/sertifikat 2.png" alt="Pengenalan ke Logika Pemrograman"
          class="rounded-lg w-full mb-4 group-hover:ring-2 group-hover:ring-green-400 transition duration-300">
@@ -413,7 +483,7 @@
 </div>
 
       <!-- Sertifikat Card 3 -->
-       <div class="bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl shadow-lg hover:shadow-green-400/40 overflow-hidden transition transform hover:-translate-y-2 duration-300">
+       <div class="bg-white/5 backdrop-blur-md border border-white/10 rounded-2xl shadow-lg hover:shadow-green-400/40 overflow-hidden transition transform hover:-translate-y-2 duration-300 fade-up-on-scroll" style="animation-delay: 0.3s">
   <div class="bg-gray-900 rounded-2xl overflow-hidden shadow-inner">
     <img src="asset/certificate/sertifikat 3.jpg" alt="ront-End Development - CSS"
          class="rounded-lg w-full mb-4 group-hover:ring-2 group-hover:ring-green-400 transition duration-300">
@@ -437,7 +507,7 @@
 </div>
 </section>
 <!-- Contact -->
-<section id="kontak" class="bg-gradient-to-br from-gray-950 via-gray-950 to-black py-20 px-6 lg:px-20">
+<section id="kontak" class="bg-gradient-to-br from-gray-950 via-gray-950 to-black py-20 px-6 lg:px-20 fade-up-on-scroll">
   <div class="max-w-lg mx-auto bg-white/10 backdrop-blur-md rounded-3xl p-10 shadow-lg">
     <h2 class="text-4xl sm:text-5xl font-extrabold text-white mb-12 tracking-tight text-center">
       Contact <span class="bg-gradient-to-r from-green-400 to-white bg-clip-text text-transparent">Me</span>
@@ -488,6 +558,7 @@
         Send Message
       </button>
     </form>
+    <audio id="yeaySound" src="asset/yeay.mp3"></audio>
   </div>
 </section>
 
@@ -608,5 +679,69 @@ const form = document.getElementById("contactForm");
   });
   
 </script>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        const el = entry.target;
+
+        if (entry.isIntersecting) {
+          if (el.classList.contains('fade-in-on-scroll')) {
+            el.classList.add('animate-fade-in');
+          } else if (el.classList.contains('slide-left-on-scroll')) {
+            el.classList.add('animate-slide-in-left');
+          } else if (el.classList.contains('slide-right-on-scroll')) {
+            el.classList.add('animate-slide-in-right');
+          } else if (el.classList.contains('fade-up-on-scroll')) {
+            el.classList.add('animate-fade-up');
+          }
+
+          el.classList.remove('opacity-0');
+        } else {
+          // Reset class agar animasi bisa terulang
+          el.classList.remove(
+            'animate-fade-in',
+            'animate-slide-in-left',
+            'animate-slide-in-right',
+            'animate-fade-up'
+          );
+          el.classList.add('opacity-0');
+        }
+      });
+    }, {
+      threshold: 0.1
+    });
+
+    document.querySelectorAll(
+      '.fade-in-on-scroll, .slide-left-on-scroll, .slide-right-on-scroll, .fade-up-on-scroll'
+    ).forEach(el => {
+      el.classList.add('opacity-0');
+      observer.observe(el);
+    });
+  });
+ 
+  //sound
+  document.addEventListener("DOMContentLoaded", function () {
+    const audio = document.getElementById("anyeong");
+
+    function playSoundOnce() {
+      audio.play().catch((err) => {
+        console.log("Autoplay gagal, tunggu interaksi user:", err);
+      });
+
+      // Hapus listener setelah sekali main
+      document.removeEventListener("click", playSoundOnce);
+      document.removeEventListener("keydown", playSoundOnce);
+      document.removeEventListener("scroll", playSoundOnce);
+    }
+
+    // Trigger main suara setelah interaksi pertama
+    document.addEventListener("click", playSoundOnce);
+    document.addEventListener("keydown", playSoundOnce);
+    document.addEventListener("scroll", playSoundOnce);
+  });
+
+</script>
+
 </body>
 </html>
